# X3MP

./: .gitignore  BUILD.md  BUILD_GUIDE.md  CLIENT_README.md  CMakeLists.txt  CROSS_COMPILE_REPORT.md  IMPLEMENTATION_PLAN.md  LINT_AND_SECURITY.md  PROJECT_ANALYSIS.md  README.md  X3MP.sln  build.bat  build.sh  build_client.bat  create_release.bat
.github/workflows/: client-ci.yml  goserver-ci.yml
Client/: .gitignore  CMakeLists.txt  Chatbox.cpp  Chatbox.h  Client.vcxproj  Client.vcxproj.filters  Console.cpp  Console.h  Logger.cpp  Logger.h  Mod.h  README.md  ReliabilityManager.cpp  ReliabilityManager.h  Renderer.cpp  Renderer.h  X3Classes.h  X3Functions.cpp  X3Functions.h  X3Util.cpp  X3Util.h  astruct_9.h  client.cpp  client.h  cppcheck.xml  defines.h  directx.cpp  directx.h  dllmain.cpp  lint-and-security.ps1  lint-and-security.sh  mem.cpp  mem.h  settings.cpp  settings.h
GoServer/: .gitignore  .golangci.yml  Makefile  README.md  compatibility_test.go  go.mod  main.go  main_test.go  security-report.json
GoServer/game/: state.go
GoServer/logging/: logger.go
GoServer/network/: packets.go  serialize.go
Server/: CMakeLists.txt  Config.cpp  Config.h  Quaternion.h  Screen.cpp  Screen.h  Script.cpp  Script.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  Universe.cpp  Universe.h  config.json  luascript.lua  main.cpp
X3MP_Launcher/: LauncherForm.Designer.cs  LauncherForm.cs  LauncherForm.resx  Program.cs  X3MP_Launcher.csproj
X3Net/: X3Net.vcxproj  X3Net.vcxproj.filters  net_entity.h  net_message.h  net_packets.h
build_attempt/: CMakeLists.txt
server-go/: README.md  go.mod  main.go  server_config.json
tests/: CMakeLists.txt  test_logger.cpp  test_packet_serialization.cpp  test_reliability.cpp
